fix: megapadding

--- a/public/asset/main.css
+++ b/public/asset/main.css
@@ -193,8 +193,7 @@ label {
 
 .chat-area {
     padding: 0;
-    padding-bottom: 10%;
-    max-height: 55vh;
+    max-height: 70vh;
     overflow-y: scroll;
     margin: 0;
     border-radius: 0;
